<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAddActivity">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
        
        <TextView
            android:id="@+id/activity_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>
        
        <EditText
            android:id="@+id/hotel_name_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="Hotel Name"/>
        <EditText
            android:id="@+id/hotel_location_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="Hotel Location"/>
        <EditText
            android:id="@+id/hotel_price_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="Hotel Price"
            android:inputType="number"/>
        <EditText
            android:id="@+id/hotel_category_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="Hotel Category"/>
        <EditText
            android:id="@+id/hotel_description_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:hint="Hotel Description"/>
        <RatingBar
            android:id="@+id/hotel_star_editadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:max="5"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />
        <ImageView
            android:id="@+id/image_editadd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/image_editadd_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_image_editadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Load Picture"
                android:gravity="center"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/btn_editadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>